aliasing of intersectHorizon in PedonSummaryFunctions; updates to series summary; updates to muoverlap; added test of using transformed compositional data (soil texture) as predictors of water retention characteristics; generalhorizontest

--- a/EcositeStatusByDMU/ecosite_status_by_dmu.Rmd
+++ b/EcositeStatusByDMU/ecosite_status_by_dmu.Rmd
@@ -12,7 +12,7 @@ output: html_document
 ###
 #Enter a regex pattern to match dmudesc
 ###
-dmupattern = "."
+dmupattern = "620."
 cat("DMUID Pattern: ",dmupattern)
 ##################################
 
